replace all translates with 3D translate * avoid chrome flicker

--- a/app/assets/stylesheets/_base-mixins.scss
+++ b/app/assets/stylesheets/_base-mixins.scss
@@ -37,7 +37,7 @@
     @include transition(none);
     background-color: darken($lightwarmgray, 6%);
     border-bottom-color: transparent;
-    @include transform(translateY(2px));
+    @include transform(translate3D(0, 2px, 0));
   }
 }
 
